--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "importHelpers": true,
         "moduleResolution": "node",
         "experimentalDecorators": true,
+        "strictFunctionTypes": false,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "resolveJsonModule": true,
